refactor: records where nothing reflects, checkstyle pass
Step 9. Verified by compiling rather than assuming: Room 2.8.4 does accept
Java records as entities, so Lesson, Exam, User, Lifetime and DateItem
become records. The two places that mutated an entity mid-merge now return
a new one (Lesson.withEnd, Exam.extendedByADay), which is what makes the
merge loops readable.

Lombok stays exactly where a framework's instantiation contract requires
mutability: the MetisJson DTOs, which are built through a no-arg
constructor and setters, and AuthStateholder.

DateAdapter no longer keeps selection in two places. It tracked both a
selected position and an isSelected flag on each item, which could
disagree; only the position remains, so DateItem is an immutable record.

Cleanup: unused imports and same-package imports left over from the
package move, unused DAO queries that nothing calls now that the UI
observes LiveData, and fully-qualified names inlined as imports. No line
exceeds 160 characters, no tabs, no star imports, Allman braces throughout.

Lint is clean. Two of its findings were real:
- Stream#toList needs API 34 and minSdk is 28, so it would have crashed on
  every device below Android 14.
- DiffUtilEquals on the sealed row interfaces is a false positive - every
  implementation is a record - now suppressed with that stated.

Backup: android:allowBackup is ignored from Android 12, so the credential
decision needed data_extraction_rules.xml to actually hold. Cloud backup
and device transfer now exclude everything.

Pre-existing unused template resources (ic_launcher_background,
reply_entries, fab_margin and similar) are left alone as out of scope.

Claude-Session: https://claude.ai/code/session_01HbXyb1QJi1YNA4zhHoPgjr